--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-Hello Liege
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
+
+  </head>
+  <body>
+    <div class="container-fluid">
+		<div class="row mt-3 border border-success">
+			<div class="col">
+				<p>Bienvenus sur le site du CIEL</p>
+			</div>
+		</div>
+		<div class="row mt-3 border-primary border">
+			<div class="col-3 pt-3"><p>Nouveauté</p></div>
+			<div class="col-6"></div>
+			<div class="col-3 pt-3"><p>Research <br> Sport</p></div>
+		</div>
+		<div class="container-fluid mt-3">
+			<div class="container-fluid col-3 pt-3 border border-warning float-left">
+				<p class="border border-primary text-wrap"> queste sono le novitàààààààààààààààààààà</p>
+				<p class="border border-primary text-wrap"> seconda novitàààààààààààààààààààààààààà</p>
+				<p class="border border-primary text-wrap"> terza novità</p>
+				<p class="border border-primary text-wrap"> quarta novità</p>
+				<p class="border border-primary text-wrap"> quinta novità</p>
+			</div>
+			<div class="container-fluid col-6 float-left">
+				<img src="../Images/pikachu.png" class="img-fluid" alt="Responsive image">
+			</div>
+			<div class="container-fluid col-3 border border-primary float-right">
+				<p class=" mt-2 pl-3 border border-success text-wrap"> Sport</p>
+				<p class=" mt-4 pl-3 border border-success text-wrap"> Sporttttttttttttttttttttttttttt</p>
+				<p class=" mt-4 pl-3 border border-success text-wrap"> Sport</p>
+				<p class=" mt-4 pl-3 border border-success text-wrap"> Sport</p>
+				<p class=" mt-4 pl-3 border border-success text-wrap"> Sport</p>
+			</div>
+		</div>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<p class="mt-3 btn bg-success main-wrapper wrapper float-left"> Foire a question</p>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+	
+
+    <!-- Optional JavaScript
+<span class="border border-primary"></span>
+<span class="border border-secondary"></span>
+<span class="border border-success"></span>
+<span class="border border-danger"></span>
+<span class="border border-warning"></span>
+<span class="border border-info"></span>
+<span class="border border-light"></span>
+<span class="border border-dark"></span>
+<span class="border border-white"></span>
+	-->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
+</html>
